--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,19 @@ local.properties
 *.suo
 *.user
 *.sln.docstates
+*.nunit
+*.VisualState.xml
+*.csproj
+*.sln
+*.nupkg
+*.dll
+*.framework.xml
+license.txt
+assemblyinfo.cs
+repositories.config
+packages.config
+
+
 
 # Build results
 [Dd]ebug/
