--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests.cs" />
+    <Compile Include="ToIranSystemTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IranSystemConvertor\IranSystemConvertor.csproj">
